UtahLiveDataTest/src/objects/UserRegistration__c.object
<CustomObject>
    <description>[Business] Need more Detailed info from Swati Singh</description>
    <fields>
        <fullName>AccountCreateFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountCreateFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>User_Registration2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffiliatedInstitution__c</fullName>
        <description>This is the field added to enter the organization of an individual applicant / SME Reviewer</description>
        <label>Affiliated Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantAddress1__c</fullName>
        <inlineHelpText>Applicant&apos;s Address</inlineHelpText>
        <label>Applicant Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantAddress2__c</fullName>
        <label>Obsolete_Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantSuffix__c</fullName>
        <label>Suffix (Obsolete)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>I.</fullName>
                </value>
                <value>
                    <fullName>II.</fullName>
                </value>
                <value>
                    <fullName>III.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COICheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store User COI acceptance</description>
        <label>COI Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COIDate__c</fullName>
        <label>COI Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>COILookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COI Lookup</label>
        <referenceTo>MasterAgreement__c</referenceTo>
        <relationshipLabel>External Registration (COI Lookup)</relationshipLabel>
        <relationshipName>External_Registration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COISignDate__c</fullName>
        <description>This field stores the COI sign date</description>
        <inlineHelpText>This field stores the COI sign date</inlineHelpText>
        <label>COI Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COIStatus__c</fullName>
        <label>COI Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COIText__c</fullName>
        <description>This field stores the COI Text for the user</description>
        <label>COI Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContactFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContactFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact record associated with the community user record.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>User_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Obsolete_Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prince George’s</fullName>
                </value>
                <value>
                    <fullName>Montgomery County</fullName>
                </value>
                <value>
                    <fullName>Arlington</fullName>
                </value>
                <value>
                    <fullName>Fairfax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCSupplySchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checkbox is checked, it is considered &quot;Yes&quot; and if Checkbox is not checked, it is considered &quot;No&quot;.</inlineHelpText>
        <label>Are you in DC Supply Schedule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNSExpirationDate__c</fullName>
        <inlineHelpText>DUNS expiration date as listed in System for Award Management (SAMS.gov) website. Please choose the appropriate date on the widget or you can enter it manually. In order to change year, click the year on the widget.</inlineHelpText>
        <label>DUNS Expiration Date (MM/DD/YYYY)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <inlineHelpText>A Data Universal Number System (DUNS) Number is a unique, non-indicative nine-digit identifier issued and maintained by Dun &amp; Bradstreet that verifies the existence of a business entity globally</inlineHelpText>
        <label>Data Universal Number System (DUNS) No.</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>the detail profile description of the applicant</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EINTextField__c</fullName>
        <formula>TEXT( EINo__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EINTextField (Obsolete)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EINText__c</fullName>
        <inlineHelpText>This is the EIN text entered.</inlineHelpText>
        <label>Employee Identification Number (EIN)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EINo__c</fullName>
        <inlineHelpText>An Employee Identification Number (EIN) is a nine-digit number provided by  Internal Revenue Service (IRS) which is often used by a business to open bank accounts, applying for business licenses, filing tax reports, filing electronic returns and taxes.</inlineHelpText>
        <label>Ob_Employee Identification Number (EIN)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EINumber__c</fullName>
        <label>Ob_Employee Identification Number (EIN)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Enter valid email address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerAddress1__c</fullName>
        <label>External Reviewer Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerAddress2__c</fullName>
        <label>External Reviewer Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerCity__c</fullName>
        <label>External Reviewer City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerCountry__c</fullName>
        <defaultValue>&apos;USA&apos;</defaultValue>
        <description>Country name</description>
        <label>External Reviewer Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerEducation__c</fullName>
        <label>Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerEmail__c</fullName>
        <description>Enter reviewers&apos;s E-mail address. For example xyz@abc.com</description>
        <label>External Reviewer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerFirstName__c</fullName>
        <label>External ReviewerFirst Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerLastName__c</fullName>
        <label>External Reviewer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerPhone__c</fullName>
        <inlineHelpText>Reviewer&apos;s Official Phone number. Format is XXX-XXX-XXXX or XXX-XXX-XXXX ext XX</inlineHelpText>
        <label>External Reviewer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerPrefix__c</fullName>
        <label>External Reviewer Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalReviewerProfileDescription__c</fullName>
        <label>Profile Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerState__c</fullName>
        <label>Physical State (Obsolete)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalReviewerZipCode__c</fullName>
        <inlineHelpText>Format for zip code XXXXX or XXXXX - XXXX</inlineHelpText>
        <label>External Reviewer Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalVerificationLog__c</fullName>
        <label>External Verification Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedralGSASchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>GSA is most widely known for its development of GSA Multiple Award Schedule (MAS) Contracts, also referred to as Federal Supply Schedule Contracts or the GSA Schedules Program</inlineHelpText>
        <label>Are you in Federal GSA Schedule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYearEndDate__c</fullName>
        <inlineHelpText>End of an Organization’s yearly period used for calculating annual financial statements.  Field should be entered in Date Format (MM/DD/YYYY)</inlineHelpText>
        <label>OrganizationFiscalYearEndDt (Obsolete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FiscalYearStartDate__c</fullName>
        <inlineHelpText>Beginning of an Organization’s yearly period used for calculating annual financial statements.  Field should be entered in Date Format (MM/DD/YYYY)</inlineHelpText>
        <label>OrganizationFiscalYearStartDt (Obsolete)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsApplicantSameAsPOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Applicant same as the POC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApplicant__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Are you an Applicant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAutoCreteatedRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto Created Record ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsContactNull__c</fullName>
        <formula>ISNULL(Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsContactNull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The field is used to indicate whether the user himself would like to act as a reviewer or not, so that while selecting users to review, their names should or should not show.</inlineHelpText>
        <label>Are you a Reviewer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSDBE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Small Bussiness Dev. Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>NDACheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify that user has checked NDA</description>
        <label>NDA Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDADate__c</fullName>
        <label>NDA Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NDALookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDA Lookup</label>
        <referenceTo>MasterAgreement__c</referenceTo>
        <relationshipLabel>External Registration</relationshipLabel>
        <relationshipName>External_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDASignDate__c</fullName>
        <description>This field captures the NDA signature date</description>
        <label>NDA Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDAStatus__c</fullName>
        <label>NDA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDAText__c</fullName>
        <description>This field captures the NDA Text for the User</description>
        <inlineHelpText>This field captures the NDA Text for the User</inlineHelpText>
        <label>NDA Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewOrganization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if user has entered new organization information</inlineHelpText>
        <label>New Organization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationCityAddress__c</fullName>
        <label>Organization City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationCountry__c</fullName>
        <formula>TEXT( Countries__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationDescription__c</fullName>
        <inlineHelpText>Description of the organization.</inlineHelpText>
        <label>Organization Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrganizationFax__c</fullName>
        <inlineHelpText>This is Organization’s recognized Fax Number.  Format is XXX-XXX-XXXX</inlineHelpText>
        <label>Organization Fax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationFiscalYearEndDate__c</fullName>
        <inlineHelpText>End of an Organization’s yearly period used for calculating annual financial statements. Field should be entered in Date Format (MM/DD)</inlineHelpText>
        <label>Organization FY End Date (MM/DD)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationFiscalYearStartDate__c</fullName>
        <inlineHelpText>Beginning of an Organization’s yearly period used for calculating annual financial statements. Field should be entered in Date Format (MM/DD)</inlineHelpText>
        <label>Organization FY Start Date (MM/DD)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationNameForExternalReviewers__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationNameFromContact__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrganizationNameFromContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <inlineHelpText>Registered Name as listed in DUN and BradStreet</inlineHelpText>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationState__c</fullName>
        <label>Organization State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationStreet2Address__c</fullName>
        <label>Organization Street2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationStreetAddress__c</fullName>
        <label>Organization Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationTypeFromContact__c</fullName>
        <formula>TEXT(Contact__r.Account.ApplicantType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrganizationTypeFromContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationTypeOther__c</fullName>
        <label>If Other, Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationTypeSInglePicklist__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State governments</fullName>
                </value>
                <value>
                    <fullName>County governments</fullName>
                </value>
                <value>
                    <fullName>City or township governments</fullName>
                </value>
                <value>
                    <fullName>Special district governments</fullName>
                </value>
                <value>
                    <fullName>Independent school districts</fullName>
                </value>
                <value>
                    <fullName>State institutions for higher education</fullName>
                </value>
                <value>
                    <fullName>Public housing authorities</fullName>
                </value>
                <value>
                    <fullName>Nonprofits having a 501 (C)(3)</fullName>
                </value>
                <value>
                    <fullName>Private institutions of higher education</fullName>
                </value>
                <value>
                    <fullName>Individuals</fullName>
                </value>
                <value>
                    <fullName>Non Profit Victim Services</fullName>
                </value>
                <value>
                    <fullName>Indian Tribe</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <inlineHelpText>Type of the Organization</inlineHelpText>
        <label>Organization Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State Governments</fullName>
                </value>
                <value>
                    <fullName>County Governments</fullName>
                </value>
                <value>
                    <fullName>City or Township Governments</fullName>
                </value>
                <value>
                    <fullName>Special District Governments</fullName>
                </value>
                <value>
                    <fullName>Independent School Districts</fullName>
                </value>
                <value>
                    <fullName>State Institutions For Higher Education</fullName>
                </value>
                <value>
                    <fullName>Public Housing Authorities</fullName>
                </value>
                <value>
                    <fullName>Nonprofits Having A 501 (C)(3)</fullName>
                </value>
                <value>
                    <fullName>Private Institutions of Higher Education</fullName>
                </value>
                <value>
                    <fullName>Individuals</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Small businesses</fullName>
                </value>
                <value>
                    <fullName>Nonprofits Without 501 (c)(3)</fullName>
                </value>
                <value>
                    <fullName>Native American Tribal Governments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrganizationZipCode__c</fullName>
        <inlineHelpText>Format for zip code in xxxxx-xxxx format.</inlineHelpText>
        <label>Organization Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationsCountry__c</fullName>
        <defaultValue>&apos;USA&apos;</defaultValue>
        <description>Country name</description>
        <label>Organization&apos;s Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgnizationPhoneNumber__c</fullName>
        <inlineHelpText>This is Organization’s recognized Phone Number.  Format is XXX-XXX-XXXX</inlineHelpText>
        <label>Organization Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>POCFormulaField__c</fullName>
        <formula>PrimaryPOCLastName__c &amp; &apos;,&apos; &amp;  PrimaryPOCFirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhysicalCity__c</fullName>
        <label>Physical City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalCountry__c</fullName>
        <defaultValue>&quot;USA&quot;</defaultValue>
        <inlineHelpText>By Default it is USA and not editable</inlineHelpText>
        <label>Physical Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalState__c</fullName>
        <label>Physical State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalStreet__c</fullName>
        <label>Physical Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalZipCode__c</fullName>
        <inlineHelpText>Format for zip code XXXXX or XXXXX - XXXX</inlineHelpText>
        <label>Physical Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositionTitle__c</fullName>
        <label>Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryAreaOfExpertisePicklist__c</fullName>
        <description>Picklist to select the Primary area  of expertise</description>
        <inlineHelpText>Select primary area of expertise .</inlineHelpText>
        <label>Primary Area of Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Prosecution</fullName>
                </value>
                <value>
                    <fullName>Shelter</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Courts</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Care Programs</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>School-based Health Care</fullName>
                </value>
                <value>
                    <fullName>Capacity-building Initiatives</fullName>
                </value>
                <value>
                    <fullName>Capital Health (Construction) Projects</fullName>
                </value>
                <value>
                    <fullName>Children with Special Health Care Needs</fullName>
                </value>
                <value>
                    <fullName>Chronic Disease</fullName>
                </value>
                <value>
                    <fullName>Cancer Prevention and Treatment</fullName>
                </value>
                <value>
                    <fullName>Maternal and Child Health Services</fullName>
                </value>
                <value>
                    <fullName>Preventive Health Services</fullName>
                </value>
                <value>
                    <fullName>Breastfeeding</fullName>
                </value>
                <value>
                    <fullName>Home Visitation</fullName>
                </value>
                <value>
                    <fullName>HIV Prevention Services (by risk/population):</fullName>
                </value>
                <value>
                    <fullName>Adolescents/Young Adults</fullName>
                </value>
                <value>
                    <fullName>MSM</fullName>
                </value>
                <value>
                    <fullName>Hetrosexual women and men</fullName>
                </value>
                <value>
                    <fullName>Older Adults</fullName>
                </value>
                <value>
                    <fullName>Injection Drug Users</fullName>
                </value>
                <value>
                    <fullName>Transgendered Persons</fullName>
                </value>
                <value>
                    <fullName>HIV Care,Treatment and Support Services</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Outpatient Medical Care</fullName>
                </value>
                <value>
                    <fullName>Oral Health</fullName>
                </value>
                <value>
                    <fullName>Medical Case Management</fullName>
                </value>
                <value>
                    <fullName>Treatment Adherence Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryAreaOfExpertise__c</fullName>
        <inlineHelpText>Describe here the primary area of expertise selected.</inlineHelpText>
        <label>Primary Area of Expertise</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryPOCEmail__c</fullName>
        <inlineHelpText>Enter Point of Contact’s E-mail address. For example xyz@abc.com</inlineHelpText>
        <label>Primary POC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PrimaryPOCFax__c</fullName>
        <inlineHelpText>Point of Contact’s Official Fax number. Format is XXX-XXX-XXXX</inlineHelpText>
        <label>Primary POC Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryPOCFirstName__c</fullName>
        <label>Primary POC First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryPOCLastName__c</fullName>
        <label>Primary POC Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryPOCPhone__c</fullName>
        <inlineHelpText>Point of Contact’s Official Phone number. Format is XXX-XXX-XXXX</inlineHelpText>
        <label>Primary POC Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PrimaryPOCPrefix__c</fullName>
        <label>Primary POC Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>